--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="flex bg-white w-[100vw] h-[100vh] justify-center items-center flex-col relative"
     (keyup.enter)="login()">
-    <div
+    <!-- <div
         class="absolute top-10 left-10 rounded-[50%] size-[25px] text-[12px] cursor-pointer border-[#1C274C] border bg-[#FFF] flex justify-center items-center">
         <span *ngIf="language==='vi'" (click)="changeLanguage('en')" class="select-none">VN</span>
         <span *ngIf="language==='en'" (click)="changeLanguage('vi')" class="select-none">EN</span>
-    </div>
+    </div> -->
     <div class="flex h-full w-full">
         <div class="grid flex-1 lg:w-[500px] grid-cols-1">
             <div class="flex justify-center items-center flex-col">
@@ -16,49 +16,36 @@
                     <form [formGroup]="formLogin" class="flex flex-col gap-7 w-[80%]">
                         <div class="w-full text-center">
                             <div class="w-full [text-shadow:_0_1px_0_rgb(0_0_0_/_40%)] text-center text-[#000] text-[30px] font-semibold">
-                                {{'Login.login'|translate}}
+                                Đăng nhập
                             </div>
                         </div>
                         <div class="flex flex-col">
                             <mat-form-field class="custom-input" appearance="outline">
                                 <input formControlName="userName" name="userName" matInput
-                                    placeholder="{{'Login.userNamePlaceholder'|translate}}" />
-                                <mat-error>{{'Login.noEmty'|translate}}</mat-error>
+                                    placeholder="Nhập tài khoản" />
+                                <mat-error>Vui lòng nhập đầy đủ thông tin!</mat-error>
                             </mat-form-field>
                         </div>
                         <div class="flex flex-col relative">
                             <mat-form-field class="custom-input relative" appearance="outline">
                                 <input formControlName="password" name="password" matInput type="password"
-                                    autocomplete="off" id="inputPass" placeholder="*********" />
+                                    autocomplete="off" id="inputPass" placeholder="Nhập mật khẩu" />
                                 <i *ngIf="hide" class="fas fa-eye absolute right-0 top-[50%] translate-y-[-50%]"
                                     (click)="showPass($event)"></i>
                                 <i *ngIf="!hide" class="fa-solid fa-eye-slash absolute right-0 top-[50%] translate-y-[-50%]"
                                     (click)="showPass($event)"></i>
-                                <mat-error>{{'Login.noEmty'|translate}}</mat-error>
+                                <mat-error>Vui lòng nhập đầy đủ thông tin!</mat-error>
                             </mat-form-field>
                             <a
-                                class="absolute right-0 bottom-0">{{'Login.forgotPass'|translate}}</a>
+                                class="absolute right-0 bottom-0 underline">Quên mật khẩu</a>
     
                         </div>
                     </form>
-                    <div class="flex gap-5 justify-center">
-    
+                    <div class="flex flex-col items-center w-full gap-5 justify-center">
                         <button nz-button nzType="primary" [nzLoading]="isLoading"
-                            class="bg-primary text-white w-[120px] rounded-[5px] h-[30px] hover:opacity-50 hover:bg-primary hover:border-none"
-                            (click)="login()">{{'Login.login'|translate}}</button>
-                    </div>
-                    <div class="flex flex-col gap-y-5 mt-4 text-[16px] font-[500] text-[#1C274C]">
-                        <div class="flex flex-col gap-2 items-center">
-                            <span>{{'Login.loginWith'|translate}}</span>
-                            <div class="flex gap-2">
-                                <a><img src="../../../assets/img/googleLogo.svg" class="size-[20px] object-cover" /></a>
-                                <a *ngIf="!loggedIn" (click)="signInWithFB()"><img src="../../../assets/img/faceBookLogo.svg" class="size-[20px] object-cover" /></a>
-                                <!-- <a (click)="loginWithTrueAccount()"><img src="../../../assets/img/logoNoText.png"
-                                        class="size-[22.5px] object-cover" /></a> -->
-                            </div>
-                        </div>
-                        <!-- <a (click)="handleOpenPopUpRegister()">{{'Login.registerAccount'|translate}}</a> -->
-    
+                            class="bg-#22B14C text-white w-full rounded-[40px] h-[30px] hover:opacity-50 hover:bg-#22B14C hover:border-none"
+                            (click)="login()">Đăng nhập</button>
+                        <div>Tạo tài khoản mới</div>
                     </div>
                 </div>
     
