--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -6,16 +6,16 @@
         <span *ngIf="language==='en'" (click)="changeLanguage('vi')" class="select-none">EN</span>
     </div> -->
     <div class="flex h-full w-full">
-        <div class="grid flex-1 lg:w-[500px] grid-cols-1">
+        <div class="grid flex-1 lg:w-[440px] grid-cols-1">
             <div class="flex justify-center items-center flex-col">
                 <div
-                    class="bg-white shadow-2xl lg:w-[500px] border-[3px] border-[rgba(102, 102, 102, 0.50)] rounded-[20px] flex flex-col justify-center items-center p-5 py-10">
+                    class="bg-white lg:w-[440px] border-[2px] border-[rgba(102, 102, 102, 0.50)] rounded-[24px] flex flex-col justify-center items-center p-4 py-5">
                     <div class="flex items-center justify-center">
                         <img class="object-cover"  src="../../../assets/img/logoSB.png"/>
                     </div>
-                    <form [formGroup]="formLogin" class="flex flex-col gap-7 w-[80%]">
+                    <form [formGroup]="formLogin" class="flex flex-col gap-6 w-[90%]">
                         <div class="w-full text-center">
-                            <div class="w-full [text-shadow:_0_1px_0_rgb(0_0_0_/_40%)] text-center text-[#000] text-[30px] font-semibold">
+                            <div class="w-full text-center text-[#333] text-[32px] font-semibold">
                                 Đăng nhập
                             </div>
                         </div>
@@ -36,17 +36,13 @@
                                     (click)="showPass($event)"></i>
                                 <mat-error>Vui lòng nhập đầy đủ thông tin!</mat-error>
                             </mat-form-field>
-                            <a
-                                class="absolute right-0 bottom-0 underline">Quên mật khẩu</a>
-    
+                            <a class="absolute right-0 bottom-[-4px] underline hover:text-[#22B14C]">Quên mật khẩu</a>
+                        </div>
+                        <div class="flex flex-col items-center w-full gap-4 justify-center">
+                            <div (click)="login()" class="bg-[#22B14C] text-white text-center text-[20px] w-full rounded-[40px] py-[8px] cursor-pointer">Đăng nhập</div>
+                            <div [routerLink]="['/register']" class="cursor-pointer hover:scale-110">Tạo tài khoản mới</div>
                         </div>
                     </form>
-                    <div class="flex flex-col items-center w-full gap-5 justify-center">
-                        <button nz-button nzType="primary" [nzLoading]="isLoading"
-                            class="bg-#22B14C text-white w-full rounded-[40px] h-[30px] hover:opacity-50 hover:bg-#22B14C hover:border-none"
-                            (click)="login()">Đăng nhập</button>
-                        <div>Tạo tài khoản mới</div>
-                    </div>
                 </div>
     
             </div>
