--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -5,9 +5,9 @@
     <div class="flex flex-col items-center justify-center w-[50%]">
         <div class="w-[84%] flex flex-col items-center justify-center">
             <div class="text-[34px] font-semibold text-white text-center">Đăng ký</div>
-            <div class="flex flex-col mt-5 gap-2 h-fit w-full pb-2 overflow-auto">
+            <div class="flex flex-col mt-2 h-fit w-full pb-2 overflow-auto">
                 <form [formGroup]="form"
-                    class="flex flex-col gap-[22px] w-full h-fit pb-2 overflow-auto">
+                    class="flex flex-col gap-[18px] w-full h-fit pb-2 overflow-auto">
                     <div class="flex flex-col flex-1 gap-[6px] w-full">
                         <span class=" text-white">Tên đăng nhập</span>
                         <div>
@@ -39,9 +39,9 @@
                         <span class="text-white">Nhập mật khẩu</span>
                         <div class="relative">
                             <input id="inputPassChangePassword" type="password" class="h-[40px] w-full rounded-[5px] px-[10px] py-[8px] outline-none border-none" formControlName="password"/>
-                            <i *ngIf="hidePass" class="fas fa-eye absolute right-0 top-[50%] translate-y-[-50%] cursor-pointer"
+                            <i *ngIf="hidePass" class="fas fa-eye absolute right-[6px] top-[50%] translate-y-[-50%] cursor-pointer"
                                 (click)="showPass($event)"></i>
-                            <i *ngIf="!hidePass" class="fa-solid fa-eye-slash absolute right-0 top-[50%] translate-y-[-50%] cursor-pointer"
+                            <i *ngIf="!hidePass" class="fa-solid fa-eye-slash absolute right-[6px] top-[50%] translate-y-[-50%] cursor-pointer"
                                 (click)="showPass($event)"></i>
                         </div>
                     </div>
@@ -49,9 +49,9 @@
                         <span class="text-white">Nhập lại mật khẩu</span>
                         <div class="relative">
                             <input id="inputRePassChangePassword" type="password" class="h-[40px] w-full rounded-[5px] px-[10px] py-[8px] outline-none border-none" formControlName="passwordConfirm"/>
-                            <i *ngIf="hideRePass" class="fas fa-eye absolute right-0 top-[50%] translate-y-[-50%] cursor-pointer"
+                            <i *ngIf="hideRePass" class="fas fa-eye absolute right-[6px] top-[50%] translate-y-[-50%] cursor-pointer"
                                 (click)="showRePass($event)"></i>
-                            <i *ngIf="!hideRePass" class="fa-solid fa-eye-slash absolute right-0 top-[50%] translate-y-[-50%] cursor-pointer"
+                            <i *ngIf="!hideRePass" class="fa-solid fa-eye-slash absolute right-[6px] top-[50%] translate-y-[-50%] cursor-pointer"
                                 (click)="showRePass($event)"></i>
                             <div *ngIf="form.hasError('passwordMismatch') && form.get('passwordConfirm')?.touched" class="text-red-500">
                                 <i class="fa-solid fa-triangle-exclamation"></i> Mật khẩu nhập lại không khớp
