--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import "./assets/styles/material.scss";
 @import "./assets/styles/density.scss";
 @import "./assets/styles/antdesign.scss";
@@ -27,4 +28,8 @@ body {
       fill: none;
     }
   }
+}
+
+@theme {
+  --font-montserrat: "Montserrat", sans-serif;
 }
