--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -1,4 +1,4 @@
-<nz-layout class="min-h-full">
+<nz-layout *ngIf="canActive" class="min-h-full">
   <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [class.hidden]="isCollapsed" [class.lg:block]="isCollapsed"
     [nzWidth]="width" nzTheme="light" [nzTrigger]="null" [nzReverseArrow]="isReverseArrow"
     class="!fixed px-4 left-0  z-10 !h-screen overflow-y-auto !overflow-x-hidden bg-primaryBG border-r-2 border-solid text-textColor shadow-[2px_0px_7px_0px_rgba(1,87,155,0.30)]">
@@ -10,11 +10,6 @@
           <span>{{userName}}</span>
         </div>
       </div>
-      <div
-        class="absolute top-0 right-0 rounded-[50%] size-[25px] text-[12px] cursor-pointer border-[#1C274C] border bg-[#FFF] flex justify-center items-center">
-        <span *ngIf="language==='vi'" (click)="changeLanguage('en')" class="select-none">VN</span>
-        <span *ngIf="language==='en'" (click)="changeLanguage('vi')" class="select-none">EN</span>
-      </div>
     </div>
     <div
       class="absolute z-50 bottom-0 left-0 right-0 flex justify-center p-3 gap-2 items-center bg-[#DAF4FF] logoutBTN cursor-pointer "
@@ -22,7 +17,6 @@
       <span nz-icon nzType="logoutIcon:antd" class="icon" nzTheme="outline"></span>
       <span class="select-none">Đăng xuất</span>
     </div>
-    <!-- Admin -->
     <div *ngIf="canActive">
       <ul nz-menu [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed" class="border-none">
         <li nz-menu-item [routerLink]="['/', 'statistical']" nzMatchRouter class="menu-item">
@@ -66,38 +60,6 @@
         </ul>
       </ul>
     </div>
-
-    <!-- Users -->
-    <div *ngIf="!canActive">
-      <ul nz-menu [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed" class="border-none">
-        <li nz-menu-item [routerLink]="['/', 'statistical']" nzMatchRouter class="menu-item">
-          <i class="fa-solid fa-chart-simple"></i>
-          <span class="ml-3">Thống kê</span>
-        </li>
-        <li nz-menu-item [routerLink]="['/', 'slection-ticket']" nzMatchRouter class="menu-item">
-          <i class="fa-solid fa-check-to-slot"></i>
-          <span class="ml-3">Tiến hành bầu cử</span>
-        </li>
-        <li nz-menu-item [routerLink]="['/', 'slection-follow']" nzMatchRouter class="menu-item">
-          <i class="fa-solid fa-magnifying-glass-chart"></i>
-          <span class="ml-3">Theo dõi bầu cử</span>
-        </li>
-        <!-- <li nz-menu-item [routerLink]="['/', 'notify']" nzMatchRouter class="menu-item">
-          <i class="fa-regular fa-bell"></i>
-          <span class="ml-3">Thông báo</span>
-        </li> -->
-        <ul nz-submenu nzTitle="{{'Menu.setting'| translate }}" nzIcon="setting" class="menu-item">
-          <li nz-menu-item [routerLink]="['/', 'user-infor',userInfor.sub]" nzMatchRouter>
-            <i class="fa-regular fa-circle-user"></i>
-            <span class="ml-3">{{'Menu.userInfor'| translate }}</span>
-          </li>
-          <li nz-menu-item [routerLink]="['/', 'setting']" nzMatchRouter class="menu-item">
-            <i class="fa-solid fa-bullhorn"></i>
-            <span class="ml-3">Cài đặt hệ thống</span>
-          </li>
-        </ul>
-      </ul>
-    </div>
   </nz-sider>
   <nz-layout class="bg-white" [ngClass]="{ 'ml-[280px]': !isCollapsed, 'lg:ml-[80px]': isCollapsed }">
     <nz-content>
@@ -109,6 +71,46 @@
   </nz-layout>
 </nz-layout>
 
-<app-change-password *ngIf="isVisiblePopUpChangePassword"
-[isVisiblePopUpChangePassword]="isVisiblePopUpChangePassword"
-(visiblePopUpChangePassword)="handelVisiblePopUpChangePassword($event)"></app-change-password>
+<div *ngIf="!canActive">
+  <div class="w-full bg-white">
+    <div class="w-full bg-[#D1F2DB] h-[100px] flex items-center fixed top-0 left-0 right-0 z-10">
+        <div class="flex items-center justify-between w-full pr-7">
+            <img class="object-cover"  src="../../../assets/img/logoHomePage.png"/>
+            <div class="flex items-center justify-between gap-[30px] ">
+                <div [routerLink]="['/home-page']" class="text-primary italic text-[18px] hover:underline cursor-pointer">Trang chủ</div>
+                <div [routerLink]="['/list-feilds']" class="text-primary italic text-[18px] hover:underline cursor-pointer">Danh sách sân</div>
+                <div class="text-primary italic text-[18px] hover:underline cursor-pointer">Sự kiện</div>
+                <div class="text-primary italic text-[18px] hover:underline cursor-pointer">Liên hệ</div>
+            </div>
+            <div class="flex items-center justify-between gap-[20px]">
+                <div class="bg-[#4FC460] text-white text-center text-[16px] py-[8px] w-[100px] rounded-[8px] cursor-pointer italic shadow-shadow-btn"
+                [routerLink]="['/register']">Đăng ký</div>
+                <div class="bg-[#4FC460] text-white text-center text-[16px] py-[8px] w-[100px] rounded-[8px] cursor-pointer italic shadow-shadow-btn"
+                [routerLink]="['/login']">Đăng nhập</div>
+            </div>
+        </div>
+    </div>
+    <router-outlet></router-outlet>
+    <!-- Footter -->
+    <div class="relative h-[300px] w-full mt-[150px] bg-[#D1F2DB] flex py-[40px] pl-[60px]">
+        <div class="flex justify-start gap-[40px] items-start w-full h-full">
+            <div class="flex flex-col items-center max-w-[260px]">
+                <img class="object-cover"  src="../../../assets/img/logoHomePage.png"/>
+                <div class="text-[#757095] leading-[145%] ">3AT SPORTS cung cấp các tiện ích thông minh giúp cho bạn tìm sân bãi và đặt sân một cách hiệu quả nhất.</div>
+            </div>
+            <div class="flex flex-col items-start max-w-[200px] mt-[12px]">
+                <div class="text-[#181433] leading-[145%] font-semibold">Thông tin</div>
+                <div class="text-[#757095] leading-[145%] mt-3">Email</div>
+                <div class="text-[#757095] leading-[145%] mt-3">Thông tin</div>
+                <div class="text-[#757095] leading-[145%] mt-3">Số điện thoại</div>
+            </div>
+            <div class="flex flex-col items-start max-w-[200px] mt-[12px]">
+                <div class="text-[#181433] leading-[145%] font-semibold">Liên hệ chủ sân</div>
+                <div class="text-[#757095] leading-[145%] mt-3">Nguyễn Văn Liêm</div>
+                <div class="text-[#757095] leading-[145%] mt-3">09384837434</div>
+            </div>
+        </div>
+        <img class="object-cover absolute bottom-[40px] right-0"  src="../../../assets/img/footerIcon.png"/>
+    </div>
+</div>
+</div>
