--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -97,7 +97,7 @@
 
               <div *ngIf="isUserMenuVisible" class="absolute right-0 top-[45px] bg-white shadow-lg rounded-md w-[180px] z-50">
                 <ul class="py-2">
-                  <li class="px-4 py-2 hover:bg-[#F0F9F2] cursor-pointer" [routerLink]="['/user-profile']">
+                  <li class="px-4 py-2 hover:bg-[#F0F9F2] cursor-pointer" [routerLink]="['/my-info']">
                     <i class="fa-regular fa-user mr-2"></i>
                     <span>Tài khoản</span>
                   </li>
