--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -1,69 +1,56 @@
 <nz-layout *ngIf="canActive" class="min-h-full">
   <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [class.hidden]="isCollapsed" [class.lg:block]="isCollapsed"
     [nzWidth]="width" nzTheme="light" [nzTrigger]="null" [nzReverseArrow]="isReverseArrow"
-    class="!fixed px-4 left-0  z-10 !h-screen overflow-y-auto !overflow-x-hidden bg-primaryBG border-r-2 border-solid text-textColor shadow-[2px_0px_7px_0px_rgba(1,87,155,0.30)]">
-    <div class="relative">
-      <div [routerLink]="['/']" routerLinkActive="router-link-active"
-        class="cursor-pointer logo mb-8 mt-8  m-auto flex flex-col h-10 items-center justify-center  rounded-md">
-        <div class="text-[20px] flex flex-col justify-center gap-3 items-center">
-          <img src="../../../assets/img/Logo-Hoc-Vien-Ky-Thuat-Mat-Ma-ACTVN.webp" alt="logo" class="w-[50px] h-[50px] rounded-[50%]">
-          <span>{{userName}}</span>
-        </div>
-      </div>
+    class="!fixed left-0  z-10 !h-screen overflow-y-auto !overflow-x-hidden bg-[#22B14C] border-r-2 border-solid text-white shadow-[2px_0px_7px_0px_rgba(1,87,155,0.30)]">
+    <div class="relative w-full h-[70px]">
+      <img class="object-cover w-full h-full"  src="../../../assets/img/logoSB.png"/>
     </div>
-    <div
-      class="absolute z-50 bottom-0 left-0 right-0 flex justify-center p-3 gap-2 items-center bg-[#DAF4FF] logoutBTN cursor-pointer "
-      (click)="handleLogout()">
-      <span nz-icon nzType="logoutIcon:antd" class="icon" nzTheme="outline"></span>
-      <span class="select-none">Đăng xuất</span>
-    </div>
-    <div *ngIf="canActive">
+    <div *ngIf="canActive" class="mt-5">
       <ul nz-menu [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed" class="border-none">
-        <li nz-menu-item [routerLink]="['/', 'statistical']" nzMatchRouter class="menu-item">
-          <i class="fa-solid fa-chart-simple"></i>
-          <span class="ml-3">Thống kê</span>
-        </li>
         <li nz-menu-item [routerLink]="['/', 'user-management']" nzMatchRouter class="menu-item">
           <i class="fa-solid fa-users"></i>
-          <span class="ml-3">{{'Menu.userManagement'| translate }}</span>
+          <span class="ml-3">Danh sách tài khoản</span>
         </li>
-        <li nz-menu-item [routerLink]="['/', 'slection-ticket']" nzMatchRouter class="menu-item">
-          <i class="fa-solid fa-check-to-slot"></i>
-          <span class="ml-3">Tiến hành bầu cử</span>
+        <li nz-menu-item [routerLink]="['/', 'setting']" nzMatchRouter class="menu-item">
+          <i class="fa-solid fa-gear"></i>
+          <span class="ml-3">Cài đặt</span>
         </li>
-        <li nz-menu-item [routerLink]="['/', 'slection-follow']" nzMatchRouter class="menu-item">
-          <!-- <i class="fa-solid fa-person-chalkboard"></i> -->
-          <i class="fa-solid fa-magnifying-glass-chart"></i>
-          <span class="ml-3">Theo dõi bầu cử</span>
-        </li>
-        <li nz-menu-item [routerLink]="['/', 'slection-management']" nzMatchRouter class="menu-item">
-          <i class="fa-solid fa-sitemap"></i>
-          <span class="ml-3">Quản lý cuộc bầu cử</span>
-        </li>
-        <li nz-menu-item [routerLink]="['/', 'level-management']" nzMatchRouter class="menu-item">
-          <i class="fa-solid fa-book-open-reader"></i>
-          <span class="ml-3">Quản lý chức vụ</span>
-        </li>
-        <!-- <li nz-menu-item [routerLink]="['/', 'notify']" nzMatchRouter class="menu-item">
-          <i class="fa-regular fa-bell"></i>
-          <span class="ml-3">Thông báo</span>
-        </li> -->
-        <ul nz-submenu nzTitle="{{'Menu.setting'| translate }}" nzIcon="setting" class="menu-item">
-          <li nz-menu-item [routerLink]="['/', 'user-infor',userInfor.sub]" nzMatchRouter>
-            <i class="fa-regular fa-circle-user"></i>
-            <span class="ml-3">{{'Menu.userInfor'| translate }}</span>
-          </li>
-          <li nz-menu-item [routerLink]="['/', 'setting']" nzMatchRouter class="menu-item">
-            <i class="fa-solid fa-bullhorn"></i>
-            <span class="ml-3">Cài đặt hệ thống</span>
-          </li>
-        </ul>
       </ul>
     </div>
   </nz-sider>
   <nz-layout class="bg-white" [ngClass]="{ 'ml-[280px]': !isCollapsed, 'lg:ml-[80px]': isCollapsed }">
+    <nz-header class="fixed top-0 right-0 left-0 h-[70px] z-50 bg-[#f2f2f2] shadow-shadow-beauty border-none px-4 flex items-center justify-between" 
+    [ngClass]="{ 'ml-[280px]': !isCollapsed, 'lg:ml-[80px]': isCollapsed, 'w-full': isCollapsed }">
+      <div class="flex items-center">
+        <div class="text-[32px] font-semibold text-[#000] ml-4">{{pageTitle}}</div>
+      </div>
+      <div class="flex items-center justify-end gap-4 relative cursor-pointer" (click)="toggleUserMenu()">
+        <div class="flex flex-col h-full justify-between items-end">
+          <div class="text-[16px] text-primary leading-[120%]">{{nameOwner}}</div>
+          <div class="text-[14px] leading-[120%]">Admin</div>
+        </div>
+        <i class="fa-regular fa-circle-user text-[32px]"></i>
+
+        <div *ngIf="isUserMenuVisible" class="absolute right-0 top-[45px] bg-white shadow-lg rounded-md w-[180px] z-50">
+          <ul class="py-2">
+            <li class="px-4 py-2 !leading-[120%] hover:bg-[#F0F9F2] cursor-pointer" [routerLink]="['/my-info']">
+              <i class="fa-regular fa-user mr-2"></i>
+              <span class="text-[15px]">Tài khoản</span>
+            </li>
+            <li class="px-4 py-2 !leading-[120%] hover:bg-[#F0F9F2] cursor-pointer">
+              <i class="fa-solid fa-key mr-2"></i>
+              <span class="text-[15px]">Đổi mật khẩu</span>
+            </li>
+            <li class="px-4 py-2 !leading-[120%] hover:bg-[#F0F9F2] text-red-500 cursor-pointer" (click)="handleLogout()">
+              <i class="fa-solid fa-right-from-bracket mr-2"></i>
+              <span class="text-[15px]">Đăng xuất</span>
+            </li>
+          </ul>
+        </div>
+    </div>
+  </nz-header>
     <nz-content>
-      <div class=" border-t border-solid border-primary px-1 h-full" [class.hidden]="!isCollapsed"
+      <div class="mt-[90px] border-t border-solid border-primary px-1 h-full" [class.hidden]="!isCollapsed"
         [class.lg:block]="!isCollapsed">
         <router-outlet></router-outlet>
       </div>
@@ -71,6 +58,7 @@
   </nz-layout>
 </nz-layout>
 
+<!-- Khách hàng -->
 <div *ngIf="!canActive">
   <div class="w-full bg-white">
     <div class="w-full bg-[#D1F2DB] h-[100px] flex items-center fixed top-0 left-0 right-0 z-10">
